CheckStyle: replace deprecated clazz.newInstance()
... with clazz.getDeclaredConstructor().newInstance() which is
declared correctly to hrow the correct exceptions.